@@ -3,6 +3,7 @@ CHANGELOG
 2.0.36
 UTILS:
 * UTIL type=device | introduce idle time for actions=system-admin-session
+* UTIL type=device | actions=system-admin-session:delete,8
 
 BUGFIX:
 
